--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uzera Analytics</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Start of Uzera Code Snippet -->
+    <!-- updated you Start of Uzera Code Snippet -->
     <script>
       (function (u, z, a) {
         if (u["a_id"]) {
