--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <!-- Header -->
     <header>
-      <div class="logo">Uzera Analytics</div>
+      <div class="logo">Uzera Analytics updating you !!</div>
       <nav>
         <ul class="nav-menu">
           <li>
